--- a/Frontend/src/styles/GlobalStyles.css
+++ b/Frontend/src/styles/GlobalStyles.css
@@ -1,19 +1,8 @@
-@font-face {
-  font-family: 'Pretendard-Regular';
-  src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff')
-    format('woff');
-  font-weight: 400;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Pretendard-Light';
-  src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Light.woff')
-    format('woff');
-  font-weight: 300;
-  font-style: normal;
-}
-
 body {
-  font-family: 'Pretendard-Light', sans-serif;
+  font-family:
+    'Pretendard Variable',
+    system-ui,
+    -apple-system,
+    sans-serif;
+  font-weight: 450;
 }
