--- a/Frontend/src/styles/GlobalStyles.css
+++ b/Frontend/src/styles/GlobalStyles.css
@@ -6,3 +6,11 @@ body {
     sans-serif;
   font-weight: 450;
 }
+
+@font-face {
+  font-family: 'Pretendard Variable';
+  src: url('../fonts/PretendardVariable.ttf') format('truetype');
+  font-weight: 45 920;
+  font-style: normal;
+  font-display: swap;
+}
