--- a/Frontend/src/styles/GlobalStyles.css
+++ b/Frontend/src/styles/GlobalStyles.css
@@ -1,16 +1,21 @@
-body {
-  font-family:
-    'Pretendard Variable',
-    system-ui,
-    -apple-system,
-    sans-serif;
-  font-weight: 450;
-}
-
 @font-face {
   font-family: 'Pretendard Variable';
-  src: url('../fonts/PretendardVariable.ttf') format('truetype');
-  font-weight: 45 920;
+  src: url('/fonts/PretendardVariable.woff2') format('woff2-variations');
+  font-weight: 50 1000;
   font-style: normal;
   font-display: swap;
+}
+
+body {
+  font-family: 'Pretendard Variable', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 450;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: inherit;
 }
